src/main/java/com/example/userbehaviormanagement/services/exceptions/errors/ResourceNotFoundException.java
package com.example.userbehaviormanagement.services.exceptions.errors;

public class ResourceNotFoundException extends RuntimeException {
    public ResourceNotFoundException(String message) {
        super(message);
    }
}
